More Pipeline cases fixed and scrollbar under pipeline removed

--- a/pyterrier/data/schematic.css
+++ b/pyterrier/data/schematic.css
@@ -207,7 +207,7 @@
     display: flex;
     align-items: center;
     align-content: stretch;
-    overflow-x: auto;
+    overflow-x: visible;
     min-height: 50px;
 }
 #ID .pts-pipeline > * {
